--- a/package.json
+++ b/package.json
@@ -9,9 +9,11 @@
     "preview": "vite preview"
   },
   "devDependencies": {
-    "vite": "^5.0.4"
+    "vite": "^5.0.4",
+    "vite-plugin-glsl": "^1.2.1"
   },
   "dependencies": {
+    "curtainsjs": "^8.1.5",
     "gsap": "^3.12.5"
   }
 }
